Final Ones_Organised - Resubmission/Cilium/Cilium Policy-denyall-test.yml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: deny-all-from-test
  namespace: myapps
spec:
  endpointSelector: {}  # Apply to all pods in the namespace
  ingressDeny:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: "test"
